nav overflow fix

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -310,6 +310,8 @@ nav.navbar {
 .navbar-collapse {
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  display: block;
+  overflow: scroll;
 }
 .navbar-fixed-top {
   top: 0;
@@ -318,6 +320,7 @@ nav.navbar {
 .navbar-collapse.collapse {
   display: none!important;
 }
+
 .navbar-nav {
   float: none!important;
   margin-top: 7.5px;
